err/compare-locales.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/compare_locales'...
Compiling './lib/python3.5/site-packages/compare_locales/checks.py'...
***   File "./lib/python3.5/site-packages/compare_locales/checks.py", line 134
    except PrintfException, e:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/compare_locales/commands.py'...
***   File "./lib/python3.5/site-packages/compare_locales/commands.py", line 150
    except (OSError, IOError), exc:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/compare_locales/compare.py'...
***   File "./lib/python3.5/site-packages/compare_locales/compare.py", line 370
    print "copied reference to " + merge_file
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/compare_locales/parser.py'...
***   File "./lib/python3.5/site-packages/compare_locales/parser.py", line 224
    except UnicodeDecodeError, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/compare_locales/tests'...
Listing './lib/python3.5/site-packages/compare_locales/tests/data'...
Compiling './lib/python3.5/site-packages/compare_locales/tests/test_checks.py'...
***   File "./lib/python3.5/site-packages/compare_locales/tests/test_checks.py", line 340
    l10n = self.getDTDEntity("Some broken \u098 unicode")
                            ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 12-16: truncated \uXXXX escape

Listing './lib/python3.5/site-packages/compare_locales-2.6.egg-info'...
Listing './lib/python3.5/site-packages/fluent'...
Listing './lib/python3.5/site-packages/fluent/migrate'...
Listing './lib/python3.5/site-packages/fluent/migrate/cldr_data'...
Listing './lib/python3.5/site-packages/fluent/syntax'...
Listing './lib/python3.5/site-packages/fluent-0.4.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytoml'...
Listing './lib/python3.5/site-packages/pytoml-0.1.14.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
